--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,1 +1,32 @@
+name: Gold Price Monitor
+
+on:
+  schedule:
+    - cron: "*/30 * * * *"
+  workflow_dispatch:
+
+jobs:
+  run:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - run: pip install requests beautifulsoup4
+
+      - run: python monitor.py
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
+
+      - run: |
+          git config user.name github-actions
+          git config user.email actions@github.com
+          git add last_price.txt
+          git commit -m "Update last price" || true
+          git push
 
