--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -27,6 +27,5 @@ jobs:
           git config user.name github-actions
           git config user.email actions@github.com
           git add last_price.txt
-          git commit -m "Update last price" || true
+          git diff-index --quiet HEAD || git commit -m "Update last price"
           git push
-
